--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <td><img src="aadil-modified.png" alt="profile pic"></td>
       <td>
         <h1>Aadil raza</h1>
-        <p><em>i am a pass out from govt politechnic roorkee baheri bareilly. in this time i trying to make myself a good web devloper.</em></p>
+        <p><em>i am a pass out from govt polytechnic roorkee baheri bareilly. in this time i trying to make myself a good web devloper.</em></p>
         <p><strong><a href="https://naatsharif.com/owais-raza-qadri/"> owais raza quadri naat </a>i am big fan of owaia raza quadri. one day i become a web devloper then i become a software devloper.</strong></p>
       </td>
     </tr>
